      \item Fix a bug that prohibited to use nested
      grouping factors in non-linear models thanks to
      Tom Wallis.
      \item Fix a bug in the linear predictor computation
      within \code{R}, occuring for ordinal models 
      with multiple category specific effects. This
      could lead to incorrect outputs of \code{predict},
      \code{fitted}, and \code{logLik} for these models.
    }
  }
}

\section{CHANGES IN VERSION 0.8.0}{
  \subsection{NEW FEATURES}{
    \itemize{ 
      \item Implement generalized non-linear models, which
      can be specified with the help of the \code{nonlinear} 
      argument in \code{brm}.
      \item Compute and plot marginal effects using the
      \code{marginal_effects} method thanks to the help 
      of Ruben Arslan.
      \item Implement zero-inflated beta models through
      family \code{zero_inflated_beta} thanks to the 
      idea of Ali Roshan Ghias.
      \item Allow to restrict domain of fixed effects and
      autocorrelation parameters using new arguments 
      \code{lb} and \code{ub} in function \code{set_prior}
      thanks to the idea of Joel Gombin.
      \item Add an \code{as.mcmc} method for compatibility 
      with the \pkg{coda} package.
      \item Allow to call the \code{WAIC}, \code{LOO}, 
      and \code{logLik} methods with new data.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Make sure that \pkg{brms} is fully compatible 
      with \pkg{loo} version 0.1.5.
      \item Optionally define the intercept
      as an ordinary fixed effect to avoid the
      reparametrization via centering of the
      fixed effects design matrix.
      \item Do not compute the WAIC in \code{summary}
      by default anymore to reduce computation time
      of the method for larger models.
      \item The \code{cauchy} family is now deprecated 
      and will be removed soon as it often has convergence 
      issues and not much practical application anyway.